[package]
name = "rust_conf_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.21"
mime = "0.3.17"
notify = "6.1.1"
regex = "1.10.3"
reqwest = { version = "0.12", features=["blocking", "json", "stream", "multipart"] }
serde = { version = "1.0.197", features=["derive"] }
serde-query = "0.2.0"
serde_json = "1.0.114"
shellexpand = "3.1.0"
tokio = { version = "1.36.0", features = ["full"] }
notify-debouncer-mini = "0.4.1"
